# adventofcode2023

./: .gitignore  create_todays_folders.ps1  pyproject.toml  readme.md
01/: day01.py
02/: day02.py  day02_2.py
03/: day03.py  day03_2.py
04/: day04.py
05/: day05.py  day05_2.py
06/: day06.py
07/: day.py  day_2.py  day_attempt2.py  day_attempt3.py
08/: day.py  ideas.txt
09/: day.py
10/: day.py
11/: day.py
12/: day.py
13/: day.py
14/: day.py
15/: day.py
16/: day.py
17/: day.py
18/: day.py
19/: day.py
20/: day.py
21/: day.py
22/: day.py
23/: day.py
24/: day.py
25/: day.py
template/: day.py
