[tool.poetry]
name = "2023-12-05-advent"
version = "0.1.0"
description = ""
authors = ["Alexander Jahn <jahn.alexander@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
